// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<td
  className="thin nowrap"
>
  <ActionsDropdown
    className="js-task-action"
  >
    <ActionsDropdownItem
      className="js-task-filter"
      onClick={[Function]}
    >
      background_tasks.filter_by_component_x.Foo
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-task-cancel"
      destructive={true}
      onClick={[Function]}
    >
      background_tasks.cancel_task
    </ActionsDropdownItem>
  </ActionsDropdown>
</td>
`;

exports[`renders 2`] = `
<td
  className="thin nowrap"
>
  <ActionsDropdown
    className="js-task-action"
  >
    <ActionsDropdownItem
      className="js-task-filter"
      onClick={[Function]}
    >
      background_tasks.filter_by_component_x.Foo
    </ActionsDropdownItem>
  </ActionsDropdown>
</td>
`;

exports[`renders 3`] = `
<td
  className="thin nowrap"
>
  <ActionsDropdown
    className="js-task-action"
  >
    <ActionsDropdownItem
      className="js-task-filter"
      onClick={[Function]}
    >
      background_tasks.filter_by_component_x.Foo
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-task-cancel"
      destructive={true}
      onClick={[Function]}
    >
      background_tasks.cancel_task
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-task-show-scanner-context"
      onClick={[Function]}
    >
      background_tasks.show_scanner_context
    </ActionsDropdownItem>
  </ActionsDropdown>
</td>
`;

exports[`renders 4`] = `
<td
  className="thin nowrap"
>
  <ActionsDropdown
    className="js-task-action"
  >
    <ActionsDropdownItem
      className="js-task-filter"
      onClick={[Function]}
    >
      background_tasks.filter_by_component_x.Foo
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-task-cancel"
      destructive={true}
      onClick={[Function]}
    >
      background_tasks.cancel_task
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-task-show-stacktrace"
      onClick={[Function]}
    >
      background_tasks.show_stacktrace
    </ActionsDropdownItem>
  </ActionsDropdown>
</td>
`;

exports[`renders 5`] = `
<td
  className="thin nowrap"
>
  <ActionsDropdown
    className="js-task-action"
  >
    <ActionsDropdownItem
      className="js-task-cancel"
      destructive={true}
      onClick={[Function]}
    >
      background_tasks.cancel_task
    </ActionsDropdownItem>
  </ActionsDropdown>
</td>
`;

exports[`shows scanner context 1`] = `
<ScannerContext
  onClose={[Function]}
  task={
    {
      "analysisId": "x123",
      "componentKey": "foo",
      "componentName": "Foo",
      "componentQualifier": "TRK",
      "hasScannerContext": true,
      "id": "AXR8jg_0mF2ZsYr8Wzs2",
      "status": "PENDING",
      "submittedAt": "2020-09-11T11:45:35+0200",
      "type": "REPORT",
    }
  }
/>
`;

exports[`shows stack trace 1`] = `
<Stacktrace
  onClose={[Function]}
  task={
    {
      "analysisId": "x123",
      "componentKey": "foo",
      "componentName": "Foo",
      "componentQualifier": "TRK",
      "errorMessage": "error!",
      "id": "AXR8jg_0mF2ZsYr8Wzs2",
      "status": "PENDING",
      "submittedAt": "2020-09-11T11:45:35+0200",
      "type": "REPORT",
    }
  }
/>
`;

exports[`shows warnings 1`] = `
<withCurrentUserContext(AnalysisWarningsModal)
  componentKey="foo"
  onClose={[Function]}
  taskId="AXR8jg_0mF2ZsYr8Wzs2"
/>
`;
